Fix align VanHoc-NgonTinh

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,7 +9,9 @@ body{
     margin: 0px auto;
 }
 #header{
-    background-color: darkslategray ;
+    /* background-color: darkslategray ; */
+    background-color: #dc3545;
+
 }
 nav{
         display: flex;
