--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -110,12 +110,13 @@ ul.products li .product-info a{
 /* ul.products li .product-info a .product-cat(category){} */
     
 ul.products li .product-info a.product-cat{
-    font-size: 11px;
+    font-size: 16px;
     text-transform: uppercase;
     color: #9e9e9e;
-    padding: 3px 0px;
+    padding: 3px 43px;
 }
- 
+
+
 ul.products li .product-info a.product-name{
     color: #334862;
     padding: 3px 0px;
